<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="@string/pref_general">
        <Preference
            android:key="pref_scan"
            android:title="@string/pref_scan"
            android:summary="@string/pref_scan_sum"/>
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/theme">
        <Preference
            android:key="pref_theme"
            android:title="@string/pref_theme" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/support">
        <Preference
            android:key="pref_gplus_com"
            android:summary="@string/pref_gplus_com_sum"
            android:title="@string/pref_gplus_com" />
        <Preference
            android:key="pref_gplus"
            android:summary="@string/pref_gplus_sum"
            android:title="@string/pref_gplus">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="http://google.com/+architjn" />
        </Preference>
        <Preference
            android:key="pref_gplus"
            android:summary="@string/pref_twitter_sum"
            android:title="@string/pref_twitter">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="https://twitter.com/architjn" />
        </Preference>
    </PreferenceCategory>
</PreferenceScreen>