<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/navigation_songs"
            android:checked="true"
            android:icon="@drawable/ic_audiotrack_white_24dp"
            android:title="@string/songs" />
        <item
            android:id="@+id/navigation_albums"
            android:icon="@mipmap/ic_launcher"
            android:title="@string/albums" />
        <item
            android:id="@+id/navigation_artist"
            android:icon="@mipmap/ic_launcher"
            android:title="@string/artists" />
        <item
            android:id="@+id/navigation_playlist"
            android:icon="@mipmap/ic_launcher"
            android:title="@string/playlist" />
    </group>
    <group android:checkableBehavior="none">
        <item
            android:id="@+id/navigation_about"
            android:title="@string/about" />
        <item
            android:id="@+id/navigation_settings"
            android:title="@string/settings" />
    </group>
</menu>